--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <title>User Registration</title>
 </head>
 <body>
+<div class="container col-md-offset-3 col-md-8 mt-lg-5">
+    <div class="row mt-2">
+        <div th:if="${param.success}">
+            Registration successful, please check your email to complete your registration
+        </div>
+        <div class="m-4">User Registration Form</div>
+    </div>
+    <form>
+        <div class="mb-3 row">
+            <label for="firstName" class="col-sm-2 col-form-label">First Name</label>
+            <div class="col-sm-6">
+                <input type="text" id="firstName" autofocus="autofocus"
+                       class="form-control" required name="firstName" th:field="@{firstName}">
+            </div>
+        </div>
+        <div class="mb-3 row">
+            <label for="lastName" class="col-sm-2 col-form-label">Last Name</label>
+            <div class="col-sm-6">
+                <input type="text" id="lastName" autofocus="autofocus"
+                       class="form-control" required name="lastName" th:field="@{lastName}">
+            </div>
+        </div>
+        <div class="mb-3 row">
+            <label for="email" class="col-sm-2 col-form-label">Email</label>
+            <div class="col-sm-6">
+                <input type="text" id="email" autofocus="autofocus"
+                       class="form-control" required name="email" th:field="@{email}">
+            </div>
+        </div>
+        <div class="mb-3 row">
+            <label for="password" class="col-sm-2 col-form-label">Password</label>
+            <div class="col-sm-6">
+                <input type="password" id="password" autofocus="autofocus"
+                       class="form-control" required name="password" th:field="@{password}">
+            </div>
+        </div>
+        <div>
+            <button type="submit" class="btn btn-success">Register</button>
+            <span>Registered already? <a href="/" th:href="@{authenticate/login-form}">
+                Login here.
+            </a></span>
+        </div>
+    </form>
 
+</div>
 
 </body>
 </html>
