Created class HomeController and Html files, Modified folder templates and controller,service,registration,security

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -2,8 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>User Registration</title>
 </head>
 <body>
@@ -12,35 +11,35 @@
         <div th:if="${param.success}">
             Registration successful, please check your email to complete your registration
         </div>
-        <div class="m-4">User Registration Form</div>
+        <h2 class="m-4">User Registration Form</h2>
     </div>
-    <form>
+    <form th:action="@{registration/register}" method="post" th:object="${user}" class="px-4">
         <div class="mb-3 row">
             <label for="firstName" class="col-sm-2 col-form-label">First Name</label>
             <div class="col-sm-6">
                 <input type="text" id="firstName" autofocus="autofocus"
-                       class="form-control" required name="firstName" th:field="@{firstName}">
+                       class="form-control" required name="firstName" th:field="*{firstName}">
             </div>
         </div>
         <div class="mb-3 row">
             <label for="lastName" class="col-sm-2 col-form-label">Last Name</label>
             <div class="col-sm-6">
                 <input type="text" id="lastName" autofocus="autofocus"
-                       class="form-control" required name="lastName" th:field="@{lastName}">
+                       class="form-control" required name="lastName" th:field="*{lastName}">
             </div>
         </div>
         <div class="mb-3 row">
             <label for="email" class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-6">
                 <input type="text" id="email" autofocus="autofocus"
-                       class="form-control" required name="email" th:field="@{email}">
+                       class="form-control" required name="email" th:field="*{email}">
             </div>
         </div>
         <div class="mb-3 row">
             <label for="password" class="col-sm-2 col-form-label">Password</label>
             <div class="col-sm-6">
                 <input type="password" id="password" autofocus="autofocus"
-                       class="form-control" required name="password" th:field="@{password}">
+                       class="form-control" required name="password" th:field="*{password}">
             </div>
         </div>
         <div>
@@ -53,5 +52,7 @@
 
 </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
