--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -8,12 +8,12 @@
 <body>
 <div class="container col-md-offset-3 col-md-8 mt-lg-5">
     <div class="row mt-2">
-        <div th:if="${param.success}">
+        <div th:if="${param.success}" class="alert alert-info">
             Registration successful, please check your email to complete your registration
         </div>
         <h2 class="m-4">User Registration Form</h2>
     </div>
-    <form th:action="@{registration/register}" method="post" th:object="${user}" class="px-4">
+    <form th:action="@{/registration/register}" method="post" th:object="${user}" class="px-4">
         <div class="mb-3 row">
             <label for="firstName" class="col-sm-2 col-form-label">First Name</label>
             <div class="col-sm-6">
@@ -44,7 +44,7 @@
         </div>
         <div>
             <button type="submit" class="btn btn-success">Register</button>
-            <span>Registered already? <a href="/" th:href="@{authenticate/login-form}">
+            <span>Registered already? <a href="/" th:href="@{/login}">
                 Login here.
             </a></span>
         </div>
