--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<html lang="en">
+<head th:replace="fragments :: boots_trap">
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title> Users </title>
+    <title> Users</title>
 </head>
 <body>
 <div class="container col-md-offset-3 col-md-8 mt-lg-5">
-    <div th:switch="${users}">
-        <h2 th:case="null">There are no user to display</h2>
-        <div th:case="*">
+    <div th:replace="fragments :: nav_bar"></div>
 
+    <div th:switch="${users}">
+        <h2 th:case="null">There are no users to display</h2>
+        <div th:case="*">
+            <h2>All Users</h2>
             <table class="table table-bordered table-hover">
                 <thead>
                 <tr>
@@ -26,22 +26,14 @@
                     <td th:text="${user.firstName}"></td>
                     <td th:text="${user.lastName}"></td>
                     <td th:text="${user.email}"></td>
-                    <td><a href="#">Edit</a></td>
-                    <td><a href="#">Delete</a></td>
+                    <td><a href="#" th:href="@{/users/edit/{id}(id=${user.id})}" class="btn btn-info">Edit</a></td>
+                    <td><a th:href="@{/users/delete/{id}(id=${user.id})}" class="btn btn-danger">Delete</a></td>
                 </tr>
                 </tbody>
             </table>
-
         </div>
-        <p><a href="#" th:href="@{/registration/registration-form}">Add a new user</a></p>
+        <p><a href="#" th:href="@{/registration/registration-form}" class="btn btn-info">Add a new user</a> </p>
     </div>
-
 </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-            crossorigin="anonymous"></script>
 </body>
 </html>
